# Changjuan

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  alembic.ini  package-lock.json  package.json  phase1.md  proposal.md  pyproject.toml
.github/workflows/: ci.yml
apps/web-admin/: next.config.ts  package.json
apps/web-h5/: package.json  tsconfig.json
docs/: ARCHITECTURE.md  LOCAL_DEMO.md  PORTFOLIO.md  README.md  SPEC.md  architecture.md  narrative_v3_plan.md  phase1-completion-audit.md  phase1-retrospective.md
docs/adr/: ADR-001-phase1-boundaries.md  ADR-002-manual-deposit.md  ADR-003-photo-hypothesis-internal-only.md
docs/guides/: local-demo.md  portfolio.md
docs/product/: phase1-delivery-map.md  phase1.md
docs/reports/: phase1-completion-audit.md
docs/runbooks/: deletion.md  phase1-smoke-checks.md  provider-failover.md
infra/docker/: docker-compose.yml
miniprogram/: app.json  app.ts  app.wxss  project.config.json  tsconfig.json
miniprogram/utils/: api.ts
scripts/: __init__.py  batch_ingest.py  narrative_agent.py  next-typecheck.mjs  phase1_external_evidence.py  phase1_infra_smoke.py  phase1_provider_smoke.py
scripts/test_audio/: CORPUS.md
tests/e2e/: test_phase1_e2e_scenarios.py
tests/integration/: test_api_phase1_contracts.py  test_voice_pipeline_phase1_contracts.py
tests/unit/: test_miniprogram_phase1_contract.py  test_narrative_v3_contract.py  test_phase1_ci_contract.py  test_phase1_core_contracts.py  test_phase1_ddl_contract.py  test_phase1_external_evidence.py  test_phase1_makefile_contract.py  (+7 more)
(+56 files in other folders)
