[project]
name = "changjuan"
version = "0.1.0"
description = "Phase 1 evidence-grounded family story platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "celery>=5.4",
    "cryptography>=43.0",
    "fastapi>=0.115",
    "faster-whisper",
    "groq>=0.11",
    "httpx>=0.27",
    "instructor>=1.6",
    "litellm>=1.52",
    "opentelemetry-api>=1.27",
    "opentelemetry-exporter-otlp>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-sdk>=1.27",
    "passlib[bcrypt]>=1.7",
    "pgvector>=0.3",
    "psycopg[binary]>=3.2",
    "pydantic>=2.9,<3",
    "pyjwt>=2.9",
    "python-multipart>=0.0.12",
    "redis>=5.1",
    "reportlab>=4.2",
    "sentry-sdk>=2.22",
    "sqlalchemy>=2.0",
    "structlog>=24.4",
    "uvicorn>=0.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "packages", "apps/api", "apps/worker", "apps/voice-pipeline"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008", "E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/phase1_provider_smoke.py" = ["E402"]
"scripts/phase1_infra_smoke.py" = ["E402"]
